groovy.properties: change